...
        gradientLayer?.endPoint = CGPoint(x: 0.5, y: 1.0)
        gradientView.layer.insertSublayer(gradientLayer!, at: 0)
    }
    
    func configure(imageURL: URL?, date: String, isLiked: Bool, onLikeButtonTapped: @escaping () -> Void) {
        likeButton.setImage(
            UIImage(named: isLiked ? "Active" : "No Active"),
            for: .normal
        )
        likeButton.accessibilityIdentifier = isLiked ? "Active" : "No Active"
        dateLabel.text = date
        self.onLikeButtonTapped = onLikeButtonTapped
        cellImage.kf.setImage(with: imageURL) { result in
...
