...
    
    private func setupTableView() {
        tableView.dataSource = self
        tableView.delegate = self
        tableView.rowHeight = UITableView.automaticDimension
        tableView.estimatedRowHeight = 200
        tableView.accessibilityIdentifier = "table View"
    }
    
    private func toggleLike(for indexPath: IndexPath) {
        let photo = service.photos[indexPath.row]
        
        UIBlockingProgressHUD.show()
...
